# aozora-epub

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md  _typos.toml  clippy.toml  lefthook.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
crates/aozora-epub/: Cargo.toml
crates/aozora-epub/src/: lib.rs
docs/adr/: 0001-parked-until-differentiation.md
