[workspace]
resolver = "3"
members  = [
    "crates/aozora-epub",
]

[workspace.package]
version       = "0.0.0"
edition       = "2024"
rust-version  = "1.95.0"
license       = "Apache-2.0 OR MIT"
description   = "EPUB3 generator for Aozora Bunko notation (parked — see ADR-0001)"
repository    = "https://github.com/P4suta/aozora-epub"
homepage      = "https://github.com/P4suta/aozora-epub"
authors       = ["aozora-epub contributors"]
readme        = "README.md"
keywords      = ["epub", "epub3", "aozora", "japanese"]
categories    = ["text-processing"]

[workspace.dependencies]
# aozora parser stack — consumed via tag-pinned git dep when work begins.
aozora = { git = "https://github.com/P4suta/aozora.git", tag = "v0.2.5" }

# Lints below mirror aozora-tools' post-PR-#9 superset (the
# "aozora-superset"). The repo is parked per ADR-0001, so the strict
# gate is here pre-emptively: when activation criteria trigger, the
# very first line of real code is already gated by the same lints as
# every other crate in the family. No drift, no "we'll tighten it
# later" debt.

[workspace.lints.rust]
# Hard bans — the compiler rejects these rather than warning.
unsafe_code      = "forbid"
# Identifier hygiene: all 日本語 appears as string literals, never as idents.
non_ascii_idents = "deny"

# Strong signals that tend to mask real bugs.
missing_debug_implementations = "warn"
missing_copy_implementations  = "warn"
trivial_casts                 = "warn"
trivial_numeric_casts         = "warn"
unused_import_braces          = "warn"
unused_lifetimes              = "warn"
unused_qualifications         = "warn"

# Lifetime / path hygiene — catches over-broad `pub`, implicit lifetimes
# in paths, and `'a: 'b` bounds the compiler could infer.
unreachable_pub                = "warn"
single_use_lifetimes           = "warn"
elided_lifetimes_in_paths      = "warn"
redundant_lifetimes            = "warn"
explicit_outlives_requirements = "warn"

# Misc quality gates.
let_underscore_drop         = "warn"  # `let _ = ...` silently drops Drop types
keyword_idents_2024         = "warn"  # 2024-edition reserved keywords as idents
variant_size_differences    = "warn"  # large enum variants — push to `Box`
ambiguous_negative_literals = "warn"  # `-1.pow(2)` precedence traps

# Dead-code policy: the compiler `warn`s by default; CI's
# `-D warnings` already promotes that to error. Spell `deny` here so a
# local `cargo build` (which doesn't pass `-D warnings`) still
# hard-fails on unreferenced items.
dead_code = "deny"

# Catch idioms deprecated by the next edition early.
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.rustdoc]
# Docs are a shipped surface: broken intra-doc links are a defect.
broken_intra_doc_links       = "deny"
private_intra_doc_links      = "warn"
invalid_codeblock_attributes = "warn"
invalid_html_tags            = "warn"
invalid_rust_codeblocks      = "warn"
bare_urls                    = "warn"
redundant_explicit_links     = "warn"
unescaped_backticks          = "warn"

[workspace.lints.clippy]
# Opt in to the three lint groups mainstream Rust libraries ship with.
# `priority = -1` lets specific carve-outs below override individual
# lints inside these groups.
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }

# Carve-outs from the cargo group: `multiple_crate_versions` fires on
# transitive dep version mismatches (e.g. unicode-width 0.1 vs 0.2
# pulled in by different deps) — those collisions are not our problem
# to fix locally. Match aozora-tools / afm policy.
multiple_crate_versions = "allow"

# `unreachable_pub` (rustc) and `redundant_pub_crate` (clippy::nursery)
# directly contradict each other: the former wants `pub` items inside
# private modules narrowed to `pub(crate)`, the latter then complains
# the `pub(crate)` is "redundant" inside a private module. We pick
# `unreachable_pub` since narrow visibility is the more useful signal,
# so the nursery half has to step aside.
redundant_pub_crate = "allow"

# Specific high-value promotions — bugs that routinely slip past default
# clippy. Tests are exempted from unwrap/expect/panic via `clippy.toml`
# so these only bite production code paths.
dbg_macro                  = "warn"  # ban forgotten `dbg!` drops
todo                       = "warn"
unimplemented              = "warn"
clone_on_ref_ptr           = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc     = "warn"
missing_assert_message     = "warn"

# Restriction group — hand-picked. The full restriction group is
# deliberately NOT enabled (it contains mutually contradictory lints);
# each entry below is a considered decision. Mirrors the canonical
# `aozora` lib's superset so a workspace-wide `cargo clippy` produces
# the same warnings whether you run it inside `aozora`, `aozora-tools`,
# or here.
str_to_string                   = "warn"  # prefer `.into()` / `String::from`
absolute_paths                  = "warn"  # prefer `use`-imported names
allow_attributes_without_reason = "warn"  # belt-and-braces; every allow must justify itself
empty_structs_with_brackets     = "warn"
if_then_some_else_none          = "warn"  # prefer `.then_some` / `.then`
let_underscore_must_use         = "warn"  # ignoring `#[must_use]` via `let _ =`
mixed_read_write_in_expression  = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method                = "warn"  # avoid trait/method-name shadowing
semicolon_outside_block         = "warn"  # `{ … };` over `{ … ; }`
try_err                         = "warn"  # prefer `?` over `Err(e)?`
unneeded_field_pattern          = "warn"  # `Foo { a, .. }` over `Foo { a, b: _, c: _ }`
verbose_file_reads              = "warn"  # prefer `fs::read_to_string` / `fs::read`
format_push_string              = "warn"  # prefer `write!(s, ...)` over `s.push_str(&format!(...))`
unnecessary_self_imports        = "warn"  # `use foo;` over `use foo::{self};` when alone
assertions_on_result_states     = "warn"  # banned: `assert!(r.is_ok())` — use `unwrap()`
filetype_is_file                = "warn"  # `Path::is_file()` doesn't follow symlinks
rc_buffer                       = "warn"  # avoid `Rc<String>` / `Rc<Vec<T>>`
rc_mutex                        = "warn"  # avoid `Rc<Mutex<T>>` (use `Arc`)
lossy_float_literal             = "warn"  # f32 / f64 literals losing precision
suspicious_xor_used_as_pow      = "warn"  # `2 ^ 8` is xor, not power

# Pedantic-group carve-outs that don't make sense for our codebase
# shape. Each one mirrors aozora-tools' call.
module_name_repetitions = "allow"  # noisy when the module name is the domain term
missing_const_for_fn    = "allow"  # forces `const fn` discipline on hot paths where the const-eligibility is incidental

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
opt-level     = 3
